--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <section id="sobre-mi">
             <div class="px-4 py-5 my-5 text-center">
                 <img class="d-block mx-auto mb-4 rounded-circle" src="assets/foto-mia.jfif" alt="" width="200" height="200">
-                <h1 class="display-5 fw-bold text-body-emphasis">Sobre mí</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis" id="titulo">Sobre mí</h1>
                 <div class="col-lg-6 mx-auto">
                   <p class="lead mb-4">
                     Soy una estudiante apasionada de ingeniería robótica. Mi amor por programar se entrelaza con mi creatividad en la pintura y la creación. Mi enfoque proactivo me impulsa a enfrentar desafíos con entusiasmo y aportar soluciones innovadoras.</p>
@@ -263,5 +263,11 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+   
+    <!--El link al codigo de la biblioteca que crea el efecto de escribir-->
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+    <!--El link q une mi código de JS siempre debe ir al último pero antes de la etiqueta body-->
+    <script src="script.js"></script>
 </body>
 </html>
